start of work on the possibility of customizing the options window

--- a/GenLauncherNet/App.xaml
+++ b/GenLauncherNet/App.xaml
@@ -5,7 +5,9 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
-        
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Windows/ColorsDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
